# AI-Report-Generator_Agent-Demo

./: .env.example  .gitignore  README.en.md  README.md  README.zh-CN.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/services/: chunker.py  document_parser.py  embedding_client.py  llm_client.py  report_generator.py  table_service.py  vector_store.py
backend/scripts/: analyze_chunking.py  check_dashscope.py  check_rag_pipeline.py
docs/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/styles/: app.css
