[project]
name = "ai-report-generator-backend"
version = "0.2.0"
description = "Backend for the AI report generator demo with local RAG."
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb>=1.3.0",
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.10.0",
    "pypdf>=6.4.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
package = false
